@@ -1,3 +1,8 @@
+2011-06-22 Christophe Jorssen <cjorssen@users.sourceforge.net>
+
+	- The lua math parser now works on basic expressions (no units, no
+	arrays, no strings, no functions, ...?).
+
 2011-06-02 Christophe Jorssen <cjorssen@users.sourceforge.net>
 
 	- Some work on a lua (lpeg based) math parser.
